[project]
name = "jackies-project"
version = "0.1.0"
description = ""
authors = [
    {name = "jlindstrom13",email = "jaquelinehildur@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlite-utils (>=3.38,<4.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.1"

